@@ -6,6 +6,7 @@ Bug fixes:
 	* Fix group separator problem in formulas (BUG 468098)
 	* Improve log scales (auto scaling and tick number)
 	* Improve auto scale (Issue #536)
+	* Fix limits when changing scale (Issue #446)
 	* Use system liborigin headers if linking against system liborigin (BUG 469367)
 
 -----2.10.0 (21.03.2023) -----
